# OpenDoorsApp

./: .gitignore
Client/: CMakeLists.txt
Client/src/: main.cpp
Client/src/Client/: Client.cpp  Client.hpp
Client/src/Connection/: Connection.cpp  Connection.hpp  IConnection.hpp  WSConnection.cpp  WSConnection.hpp
Client/src/Logger/: Logger.hpp
Client/src/Repo/: Entrance.cpp  Entrance.hpp  House.cpp  House.hpp  Room.cpp  Room.hpp
Client/src/UI/: BasePanel.hpp  ConcretePanels.cpp  ConcretePanels.hpp  Panel.hpp  Ui.cpp  Ui.hpp
Client/utils/: utils.cpp  utils.hpp
Server/: CMakeLists.txt  main.cpp
Server/src/: main.cpp
Server/src/Connection/: IConnection.hpp  WSConnection.cpp  WSConnection.hpp
Server/src/DataBase/: DataBase.cpp  DataBase.hpp
Server/src/Server/: Server.cpp  Server.hpp
Server/utils/: utils.cpp  utils.hpp
